--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,2 @@
-BOT_TOKEN = "Ваш токен для бота, полученный от @BotFather"
+BOT_TOKEN = "5457583913:AAEQPjyKgDEAv35vxlfzyjy6bcWLeGI4jFM"
 RAPID_API_KEY = "Ваш ключ полученный от API по адресу rapidapi.com/apidojo/api/hotels4/"
